MAPREDUCE-1369. JUnit tests should never depend on anything in conf. Contributed by Anatoli Fomenko.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@904397 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -110,6 +110,7 @@
   <property name="test.junit.maxmemory" value="512m" />
   <property name="test.tmp.dir" value="${env.TMP}" />
   <property name="test.temp.dir" value="${env.TEMP}" />
+  <property name="test.conf.dir" value="${build.dir}/test/conf" />
 
   <property name="test.tools.input.dir" value="${basedir}/src/test/tools/data" />
 
@@ -235,7 +236,9 @@
     <pathelement location="${build.examples}"/>
     <pathelement location="${build.tools}"/>
     <pathelement path="${clover.jar}"/>
-    <path refid="classpath"/>
+    <pathelement location="${build.classes}"/>
+    <pathelement location="${test.conf.dir}"/>
+    <path refid="ivy-common.classpath"/>
     <pathelement location="${test.mapred.build.classes}" />
     <path refid="ivy-test.classpath"/>
   </path>
@@ -304,6 +307,12 @@
      </unzip>
 
     <copy todir="${conf.dir}" verbose="true">
+      <fileset dir="${conf.dir}" includes="**/*.template"/>
+      <mapper type="glob" from="*.template" to="*"/>
+    </copy>
+
+    <mkdir dir="${test.conf.dir}"/>
+    <copy todir="${test.conf.dir}" verbose="true">
       <fileset dir="${conf.dir}" includes="**/*.template"/>
       <mapper type="glob" from="*.template" to="*"/>
     </copy>
