--- a/ivy.xml
+++ b/ivy.xml
@@ -54,10 +54,10 @@
     <artifact conf="master"/>
   </publications>
  <dependencies>
-   <dependency org="org.apache.hadoop" name="hadoop-core" 
-               rev="${hadoop-core.version}" conf="common->default"/> 
-   <dependency org="org.apache.hadoop" name="hadoop-core-test" 
-               rev="${hadoop-core.version}" conf="common->default"/> 
+   <dependency org="org.apache.hadoop" name="hadoop-common" 
+               rev="${hadoop-common.version}" conf="common->default"/> 
+   <dependency org="org.apache.hadoop" name="hadoop-common-test" 
+               rev="${hadoop-common.version}" conf="common->default"/> 
    <dependency org="org.apache.hadoop" name="hadoop-hdfs" 
                rev="${hadoop-hdfs.version}" conf="common->default"/> 
    <dependency org="commons-logging" name="commons-logging" 
@@ -69,8 +69,8 @@
                conf="common->master"/>
    <dependency org="org.slf4j" name="slf4j-log4j12" 
                rev="${slf4j-log4j12.version}" conf="common->master"/>
-   <dependency org="org.apache.hadoop" name="hadoop-core-test" 
-               rev="${hadoop-core.version}" conf="test->default"/>
+   <dependency org="org.apache.hadoop" name="hadoop-common-test" 
+               rev="${hadoop-common.version}" conf="test->default"/>
    <dependency org="org.apache.hadoop" name="hadoop-hdfs-test" 
                rev="${hadoop-hdfs.version}" conf="test->default"/>
 
