--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -41,7 +41,7 @@ ftplet-api.version=1.0.0
 ftpserver-core.version=1.0.0
 ftpserver-deprecated.version=1.0.0-M2
 
-hadoop-core.version=0.22.0-SNAPSHOT
+hadoop-common.version=0.22.0-SNAPSHOT
 hadoop-hdfs.version=0.22.0-SNAPSHOT
 
 hsqldb.version=1.8.0.10
