--- a/src/contrib/block_forensics/ivy.xml
+++ b/src/contrib/block_forensics/ivy.xml
@@ -42,7 +42,7 @@
     <artifact conf="master"/>
   </publications>
   <dependencies>
-    <dependency org="org.apache.hadoop" name="hadoop-core" 
-                rev="${hadoop-core.version}" conf="common->default"/>  
+    <dependency org="org.apache.hadoop" name="hadoop-common" 
+                rev="${hadoop-common.version}" conf="common->default"/>  
   </dependencies>
 </ivy-module>
