--- a/src/contrib/eclipse-plugin/build.xml
+++ b/src/contrib/eclipse-plugin/build.xml
@@ -67,8 +67,8 @@
   <!-- Override jar target to specify manifest -->
   <target name="jar" depends="compile" unless="skip.contrib">
     <mkdir dir="${build.dir}/lib"/>
-    <copy tofile="${build.dir}/lib/hadoop-core.jar">
-      <fileset dir="${hadoop.root}/build/ivy/lib/Hadoop/common" includes="hadoop-core-*.jar" excludes="hadoop-core-test-*.jar"/>
+    <copy tofile="${build.dir}/lib/hadoop-common.jar">
+      <fileset dir="${hadoop.root}/build/ivy/lib/Hadoop/common" includes="hadoop-common-*.jar" excludes="hadoop-common-test-*.jar"/>
     </copy> 
     <copy file="${hadoop.root}/build/ivy/lib/Hadoop/common/commons-cli-${commons-cli.version}.jar"  todir="${build.dir}/lib" verbose="true"/>
     <jar
