--- a/src/contrib/raid/ivy.xml
+++ b/src/contrib/raid/ivy.xml
@@ -37,12 +37,12 @@
   </publications>
   <dependencies>
     <dependency org="org.apache.hadoop"
-      name="hadoop-core"
-      rev="${hadoop-core.version}"
+      name="hadoop-common"
+      rev="${hadoop-common.version}"
       conf="common->default"/>
     <dependency org="org.apache.hadoop"
-      name="hadoop-core-test"
-      rev="${hadoop-core.version}"
+      name="hadoop-common-test"
+      rev="${hadoop-common.version}"
       conf="test->default"/>
     <dependency org="org.apache.hadoop"
       name="hadoop-hdfs"
