--- a/src/contrib/streaming/ivy.xml
+++ b/src/contrib/streaming/ivy.xml
@@ -40,10 +40,10 @@
     <artifact conf="master"/>
   </publications>
   <dependencies>
-    <dependency org="org.apache.hadoop" name="hadoop-core" 
-                rev="${hadoop-core.version}" conf="common->default"/>
-    <dependency org="org.apache.hadoop" name="hadoop-core-test" 
-                rev="${hadoop-core.version}" conf="test->default"/>
+    <dependency org="org.apache.hadoop" name="hadoop-common" 
+                rev="${hadoop-common.version}" conf="common->default"/>
+    <dependency org="org.apache.hadoop" name="hadoop-common-test" 
+                rev="${hadoop-common.version}" conf="test->default"/>
     <dependency org="org.apache.hadoop" name="hadoop-hdfs" 
                 rev="${hadoop-hdfs.version}" conf="common->default"/>
     <dependency org="org.apache.hadoop" name="hadoop-hdfs-test"
