--- a/ivy.xml
+++ b/ivy.xml
@@ -39,6 +39,7 @@
     <conf name="common" visibility="private" extends="compile,runtime" description="common artifacts"/>
     <conf name="javadoc" visibility="private" description="artiracts required while performing doc generation" extends="common"/>
     <conf name="test" extends="common" visibility="private" description="the classpath needed to run tests"/>
+    <conf name="system" extends="test" visibility="private" description="the classpath needed to run system tests"/>
 
     <conf name="test-hdfswithmr" extends="test" visibility="private" description="the classpath needed to run tests"/>
 
@@ -60,6 +61,10 @@
                rev="${hadoop-common.version}" conf="common->default"/> 
    <dependency org="org.apache.hadoop" name="hadoop-hdfs" 
                rev="${hadoop-hdfs.version}" conf="common->default"/> 
+   <dependency org="org.apache.hadoop" name="hadoop-common-instrumented"
+               rev="${hadoop-common.version}" conf="system->default"/>
+   <dependency org="org.apache.hadoop" name="hadoop-hdfs-instrumented"
+               rev="${hadoop-common.version}" conf="system->default"/>
    <dependency org="commons-logging" name="commons-logging" 
                rev="${commons-logging.version}" conf="common->master"/>
    <dependency org="log4j" name="log4j" rev="${log4j.version}" 
