--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -18,6 +18,7 @@ apacheant.version=1.7.1
 ant-task.version=2.0.10
 
 #Aspectj depedency for Fault injection
+#This property has to be updated synchronously with aop.xml
 aspectj.version=1.6.5
 
 avro.version=1.3.0
