MAPREDUCE-1870. Harmonize MapReduce JAR library versions with Common and HDFS.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@959509 13f79535-47bb-0310-9956-ffa450edef68

--- a/ivy.xml
+++ b/ivy.xml
@@ -98,7 +98,11 @@
    <dependency org="org.apache.lucene" name="lucene-core" 
                rev="${lucene-core.version}" conf="javadoc->default"/>
    <dependency org="org.apache.hadoop" name="avro" rev="${avro.version}" 
-               conf="common->default"/>
+               conf="common->default">
+      <exclude module="ant"/>
+      <exclude module="jetty"/>
+      <exclude module="slf4j-simple"/>
+    </dependency>
    <dependency org="org.mockito" name="mockito-all" rev="${mockito-all.version}" 
                conf="test->default"/>
    <!-- dependency addition for the fault injection -->
