--- a/src/contrib/mumak/ivy.xml
+++ b/src/contrib/mumak/ivy.xml
@@ -117,6 +117,10 @@
     <dependency org="org.apache.hadoop"
       name="avro"
 	  rev="${avro.version}"
-      conf="common->default"/>
+      conf="common->default">
+      <exclude module="ant"/>
+      <exclude module="jetty"/>
+      <exclude module="slf4j-simple"/>
+    </dependency>
   </dependencies>
 </ivy-module>
