--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -14,23 +14,22 @@
 #It drives ivy and the generation of a maven POM
 
 #These are the versions of our dependencies (in alphabetical order)
-apacheant.version=1.7.1
 ant-task.version=2.0.10
 
 #Aspectj depedency for Fault injection
 #This property has to be updated synchronously with aop.xml
 aspectj.version=1.6.5
 
-avro.version=1.3.0
+avro.version=1.3.2
 
 checkstyle.version=4.2
 
 commons-cli.version=1.2
 commons-collections.version=3.1
-commons-httpclient.version=3.0.1
-commons-lang.version=2.4
-commons-logging.version=1.0.4
-commons-logging-api.version=1.0.4
+commons-httpclient.version=3.1
+commons-lang.version=2.5
+commons-logging.version=1.1.1
+commons-logging-api.version=1.1
 commons-el.version=1.0
 commons-fileupload.version=1.2
 commons-io.version=1.4
@@ -47,16 +46,15 @@ hadoop-hdfs.version=0.22.0-SNAPSHOT
 
 hsqldb.version=1.8.0.10
 
-#ivy.version=2.0.0-beta2
-ivy.version=2.0.0-rc2
+ivy.version=2.1.0
 
 jasper.version=5.5.12
 jsp.version=2.1
 jsp-api.version=5.5.12
-jets3t.version=0.6.1
+jets3t.version=0.7.1
 jetty.version=6.1.14
 jetty-util.version=6.1.14
-junit.version=4.5
+junit.version=4.8.1
 jdiff.version=1.0.9
 
 kfs.version=0.3
@@ -66,7 +64,7 @@ lucene-core.version=2.3.1
 
 mina-core.version=2.0.0-M5
 
-mockito-all.version=1.8.0
+mockito-all.version=1.8.2
 
 oro.version=2.0.8
 
@@ -75,8 +73,8 @@ rats-lib.version=0.6
 servlet.version=4.0.6
 servlet-api-2.5.version=6.1.14
 servlet-api.version=2.5
-slf4j-api.version=1.4.3
-slf4j-log4j12.version=1.4.3
+slf4j-api.version=1.5.11
+slf4j-log4j12.version=1.5.11
 
 xmlenc.version=0.52
 xerces.version=1.4.4
