--- a/src/contrib/streaming/ivy.xml
+++ b/src/contrib/streaming/ivy.xml
@@ -69,7 +69,11 @@
     <dependency org="log4j" name="log4j" 
                 rev="${log4j.version}" conf="common->master"/>
     <dependency org="org.apache.hadoop" name="avro" 
-                rev="${avro.version}" conf="common->default"/>
+                rev="${avro.version}" conf="common->default">
+      <exclude module="ant"/>
+      <exclude module="jetty"/>
+      <exclude module="slf4j-simple"/>
+    </dependency>
     <dependency org="org.slf4j" name="slf4j-api" 
                 rev="${slf4j-api.version}" conf="common->master"/>
   </dependencies>
