--- a/src/contrib/capacity-scheduler/build.xml
+++ b/src/contrib/capacity-scheduler/build.xml
@@ -25,9 +25,19 @@ to call at top-level: ant deploy-contrib compile-core-test
 
   <import file="../build-contrib.xml"/>
 
-  <target name="docs" depends="forrest.check" description="Generate forrest-based documentation. To use, specify -Dforrest.home=&lt;base of Apache Forrest installation&gt; on the command line." if="forrest.home">
+  <target name="docs.check">
+    <condition property="generate-capacity-scheduler-docs">
+      <and>
+        <isset property="forrest.home"/>
+        <available file="${conf.dir}/capacity-scheduler.xml.template" property="capacity-scheduler.xml.template.present"/>
+      </and>
+    </condition>
+  </target>
+  <target name="docs" depends="forrest.check,docs.check" if="generate-capacity-scheduler-docs" description="Generate forrest-based documentation. To use, specify -Dforrest.home=&lt;base of Apache Forrest installation&gt; on the command line.">
+  	<!-- The template file may not exist if building from a tarball -->
   	<copy file="src/java/mapred-queues.xml.template"
-  	      tofile="${build.docs}/mapred-queues-capacity-scheduler.xml"/>
+  	      tofile="${build.docs}/mapred-queues-capacity-scheduler.xml"
+  	      failonerror="false"/>
     <xslt in="${conf.dir}/capacity-scheduler.xml.template"
     	out="${build.docs}/capacity-scheduler-conf.html"
     	style="${conf.dir}/configuration.xsl"/>
