--- a/src/contrib/mumak/build.xml
+++ b/src/contrib/mumak/build.xml
@@ -32,6 +32,11 @@ to call at top-level: ant deploy-contrib compile-core-test
   <import file="../build-contrib.xml"/>
   <property name="mumak.stamp.file" value="${build.dir}/mumak.uptodate.stamp"/>
 
+  <path id="mumak-classpath">
+    <pathelement location="${hadoop.root}/build/contrib/capacity-scheduler/classes"/>
+    <path refid="contrib-classpath"/>
+  </path>
+
   <target name="compile-java-sources" depends="init, ivy-retrieve-common" unless="skip.contrib">
     <echo message="contrib: ${name}"/>
     <javac
@@ -41,7 +46,7 @@ to call at top-level: ant deploy-contrib compile-core-test
     destdir="${build.classes}"
     debug="${javac.debug}"
     deprecation="${javac.deprecation}">
-    <classpath refid="contrib-classpath"/>
+    <classpath refid="mumak-classpath"/>
     </javac>
   </target>
 
@@ -59,7 +64,7 @@ to call at top-level: ant deploy-contrib compile-core-test
     <echo message="Start weaving aspects in place"/>
     <iajc
       encoding="${build.encoding}" 
-      srcdir="${hadoop.root}/src/java/;${hadoop.root}/build/src/;${src.dir}"
+      srcdir="${hadoop.root}/src/java/;${hadoop.root}/src/contrib/capacity-scheduler/src/java/;${hadoop.root}/build/src/;${src.dir}"
       includes="org/apache/hadoop/**/*.java, org/apache/hadoop/**/*.aj"
       destDir="${build.classes}"
       debug="${javac.debug}"
@@ -67,7 +72,7 @@ to call at top-level: ant deploy-contrib compile-core-test
       source="${javac.version}"
       fork="yes"
       deprecation="${javac.deprecation}">
-      <classpath refid="contrib-classpath"/>
+      <classpath refid="mumak-classpath"/>
     </iajc>
     <touch file="${mumak.stamp.file}" mkdirs="true" />
     <echo message="Weaving of aspects is finished"/>
